# ai-memory-orchestrator

./: .amo.yaml  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  SUPPORT.md  opencode.json  pyproject.toml
.ai/: decisions.md  graph.md  manifest.yaml  state.md  tasks.md  tests.md
.ai/evidence/: README.md
.ai/evolution/: best_params.yaml  cycle-0001.json  cycle-0002.json  cycle-0003.json  cycle-0004.json  cycle-0005.json  cycle-0006.json  cycle-0007.json  findings.md  metrics.json  parameter-report.md  plan.md  trials.jsonl
.amo/optimization/: objective.yaml  search_space.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml  codeql.yml  opencode.yml  publish.yml  release-check.yml  scorecard.yml
amo/: __init__.py  cli.py  config.py  io.py  paths.py
amo/adapters/: agents.py  claude.py  cline.py  cursor.py  obsidian.py  opencode.py  profile.py
amo/context/: explain.py  graph_neighborhood.py  profiles.py  ranking.py  render.py
amo/core/: benchmark.py  context.py  evolve.py  graph.py  handoff.py  init.py  optimize.py  optimize_params.py  postflight.py  scan.py  server.py  status.py  validate.py
amo/embeddings/: __init__.py  index.py
amo/evidence/: __init__.py  ledger.py  schema.py
amo/graph/: gexf.py  (+7 more)
benchmarks/: README.md
docs/: 10-10-scorecard.md  adapters.md  adoption.md  agent-context-discipline.md  architecture.md  benchmark.md  comparison.md  context-engine.md  demo.md  embeddings.md  evidence-ledger.md  federation.md  graph-interoperability.md  graph-model.md  graph-ontology.md  industry-graph-foundation.md  interop-status.md  manifesto.md  maturity-model.md  mcp-server.md  mcp.md  memory-model.md  neo4j.md  obsidian-graph-export.md  obsidian-vs-amo.md  obsidian.md  optimizable-parameters.md  problem.md  quickstart.md  recursive-optimization.md  release-hardening.md  release-notes-0.1.0-alpha.md  release-process.md  roadmap.md  run-history.md  scaling-roadmap.md  schema-contract.md  server.md  validators.md
schemas/: amo-graph.schema.json
tests/: test_adapters.py  test_benchmark_evolve.py  test_benchmark_truth.py  test_cli_smoke.py  test_code_structure_graph.py  test_config.py  test_context.py  test_embeddings.py  test_evidence_ledger.py  test_example_fixtures.py  test_graph_exports.py  test_graph_neighborhood_context.py  test_graph_validation.py  test_init.py  test_mcp.py  test_optimizer.py  test_optimizer_params.py  test_postflight_run_history.py  test_runtime_validation.py  test_scan.py  test_scan_config.py  test_schema_artifact.py  test_server_ui.py  test_session_pack.py  test_status.py  test_validate.py
(+72 files in other folders)
