[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-memory-orchestrator"
version = "0.1.0"
description = "Git-native memory compiler and context optimizer for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Eliuth Chavero" }]
keywords = ["ai", "agents", "memory", "context", "github", "obsidian", "mcp"]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0"]

[project.scripts]
amo = "amo.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["amo"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "templates"
"docs" = "docs"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
