[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-memory-orchestrator"
version = "0.1.0a1"
description = "Git-native memory compiler and context optimizer for AI coding agents."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Eliuth Chavero" }]
keywords = ["ai", "agents", "memory", "context", "github", "obsidian", "mcp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Documentation",
]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "rich>=13.7.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "ruff>=0.5.0", "httpx>=0.27.0"]

[project.urls]
Homepage = "https://github.com/voidzeit/ai-memory-orchestrator"
Repository = "https://github.com/voidzeit/ai-memory-orchestrator"
Issues = "https://github.com/voidzeit/ai-memory-orchestrator/issues"

[project.scripts]
amo = "amo.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["amo"]

[tool.hatch.build.targets.wheel.force-include]
"templates" = "templates"
"docs" = "docs"
"schemas" = "schemas"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
